--- a/package.json
+++ b/package.json
@@ -1,39 +1,25 @@
 {
-  "name": "geo-map",
+  "name": "react-three-geojson-globe",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.6.1",
+    "@react-three/drei": "^10.7.3",
     "@react-three/fiber": "^9.3.0",
-    "@turf/turf": "^7.2.0",
     "3d-tiles-renderer": "^0.4.14",
-    "axios": "^1.11.0",
-    "geojson-antimeridian-cut": "^0.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-globe.gl": "^2.35.0",
-    "three": "^0.179.0",
-    "three-geojson": "github:gkjohnson/three-geojson",
-    "three-geojson-geometry": "^2.1.1",
-    "three-globe": "^2.44.0",
-    "three-stdlib": "^2.36.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "three": "^0.179.1",
+    "three-geojson": "github:gkjohnson/three-geojson"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.30.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.33.0",
+    "vite": "^7.1.2"
   }
 }
