--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-three/drei": "^10.7.3",
@@ -20,6 +22,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9.33.0",
+    "gh-pages": "^6.3.0",
     "vite": "^7.1.2"
   }
 }
